[gd_scene load_steps=2 format=3 uid="uid://cgmpnq41ukt1i"]

[ext_resource type="Script" uid="uid://dus8w4se1onic" path="res://game_menu.gd" id="1_ipshh"]

[node name="GameMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -4.0
offset_right = 5.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameMenu" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource("1_ipshh")

[node name="PanelContainer" type="PanelContainer" parent="GameMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="GameMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 250

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SETTINGS" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "SETTINGS:"

[node name="FOV" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/FOV"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Camera FOV: "

[node name="Fov_slider" type="HSlider" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/FOV"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
min_value = 60.0
max_value = 120.0
value = 60.0

[node name="Fov_label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/FOV"]
layout_mode = 2
text = "60"

[node name="Spacer" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Spacer"]
custom_minimum_size = Vector2(500, 25)
layout_mode = 2

[node name="PostProcess" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Post Processing Toggles:
"

[node name="Toon Shader" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Toon Shader"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Outline Shader Effect:"

[node name="OutlineToggle" type="CheckBox" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Toon Shader"]
custom_minimum_size = Vector2(25, 35)
layout_mode = 2
button_pressed = true

[node name="Dither Shader" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Dither Shader"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Dithering Shader Toggle:"

[node name="DitherToggle" type="CheckBox" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Dither Shader"]
custom_minimum_size = Vector2(25, 35)
layout_mode = 2
button_pressed = true

[node name="DitherSlider" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/DitherSlider"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Dithering Amount: "

[node name="Dither_slider" type="HSlider" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/DitherSlider"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.3

[node name="Dither_Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/DitherSlider"]
layout_mode = 2
text = "0.3"

[node name="Color Limiter" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Color Limiter"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Color Limits Toggle:	"

[node name="ColorLimToggle" type="CheckBox" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Color Limiter"]
custom_minimum_size = Vector2(25, 35)
layout_mode = 2
button_pressed = true

[node name="ColorSlider" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/ColorSlider"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Color Limit Val: "

[node name="Color_slider" type="HSlider" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/ColorSlider"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
min_value = 2.0
max_value = 64.0
value = 32.0

[node name="Color_Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/ColorSlider"]
layout_mode = 2
text = "32"

[node name="ColorPalette" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/ColorPalette"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 25
text = "Color Palette Toggle:"

[node name="ColorPaletteToggle" type="CheckBox" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/ColorPalette"]
custom_minimum_size = Vector2(25, 35)
layout_mode = 2
button_pressed = true

[node name="Spacer2" type="HBoxContainer" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="GameMenu/PanelContainer/MarginContainer/VBoxContainer/Spacer2"]
custom_minimum_size = Vector2(500, 25)
layout_mode = 2
